refactor(club): broad Optional/stream sweep across services
- ClubMembershipService: flatMap+groupingBy for member-group index; lift Optional<User> in 2 mapper lambdas
- ClubSessionService: Optional defaults for category/scheduledAt/groupId/resolved-training; format with Optional.map
- ClubStatsService: Optional defaults for tss/userInfo (5 sites); IntStream.range for indexed leaderboard;
  switch statement for sport distance bucket; Optional<Race> for race-goal title/sport/distance/location/date
- ClubActivityService: Optional.map for actor name resolution (3 sites)
- ClubGazetteService: Optional defaults for title/content updates; ArrayList copy via Optional.map
- ClubInviteCodeService: Optional.map for nullable LocalDateTime toString and group-name lookup
- ClubService, RecurringSessionService, SessionGpxService: Optional.orElse for default values